--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Log</title>
   </head>
-  <body>
+  <body class="bg-white dark:bg-slate-800 text-gray-900 dark:text-slate-200">
     <div id="root"></div>
     <div id="modal"></div>
     <script type="module" src="/src/main.jsx"></script>
